--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ quarkus.datasource.url = jdbc:postgresql://${DB_CONN_URL}/paituli
 quarkus.datasource.driver = org.postgresql.Driver
 quarkus.datasource.username = ${DB_USERNAME}
 quarkus.datasource.password = ${DB_PASSWORD}
+
+# email configuration
+%dev.quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
+%dev.quarkus.mailer.mock = true
