--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
       <version>3.11.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-mailer</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
