--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-mailer</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-vertx</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
