--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,21 @@ quarkus.datasource.driver = org.postgresql.Driver
 quarkus.datasource.username = ${DB_USERNAME}
 quarkus.datasource.password = ${DB_PASSWORD}
 
+# download configuration
+%prod.paituli.download.inputPath = ${DOWNLOAD_INPUT_PATH}
+%prod.paituli.download.outputPath = ${DOWNLOAD_OUTPUT_PATH}
+%prod.paituli.download.baseUrl = ${DOWNLOAD_BASE_URL}
+%dev.paituli.download.inputPath = resources/tmp
+%dev.paituli.download.outputPath = resources/tmp
+%dev.paituli.download.baseUrl = http://www.example.com/tmp
+
 # email configuration
-%dev.quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
+%prod.quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
+%prod.quarkus.mailer.host = ${MAILER_HOST}
+%prod.quarkus.mailer.port = ${MAILER_PORT}
+%prod.quarkus.mailer.username = ${MAILER_USERNAME}
+%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
+%prod.quarkus.mailer.ssl = true
+%prod.quarkus.mailer.mock = false
 %dev.quarkus.mailer.mock = true
+%test.quarkus.mailer.mock = true
