Download generation, refactoring

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,10 @@
 quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
 quarkus.datasource.driver=org.h2.Driver
+
+paituli.download.filePrefix = paituli_
+paituli.download.inputPath = resources/tmp
+paituli.download.outputPath = resources/tmp
+paituli.download.outputBaseUrl = https://avaa.tdata.fi/tmp
+paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
+
+quarkus.mailer.mock = true
