Change filePaths to List, rename and reorder packages

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,5 @@ paituli.download.outputBaseUrl = https://avaa.tdata.fi/tmp
 paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
 
 quarkus.mailer.mock = true
+
+paituli.log.salt = "batman"
