--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
 %prod.quarkus.mailer.ssl = true
 %prod.quarkus.mailer.mock = false
 %dev.quarkus.mailer.mock = true
+
+# log configuration
+%prod.paituli.log.salt = ${LOG_SALT}
+%dev.paituli.log.salt = "batman"
