AVAA-1030: Download zip/txt generation (#7)
* Add download paths and production mailer config

* Download generation, refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,23 @@ quarkus.datasource.driver = org.postgresql.Driver
 quarkus.datasource.username = ${DB_USERNAME}
 quarkus.datasource.password = ${DB_PASSWORD}
 
+# download configuration
+paituli.download.filePrefix = paituli_
+%prod.paituli.download.inputPath = ${DOWNLOAD_INPUT_PATH}
+%prod.paituli.download.outputPath = ${DOWNLOAD_OUTPUT_PATH}
+%prod.paituli.download.outputBaseUrl = ${DOWNLOAD_OUTPUT_BASE_URL}
+%prod.paituli.download.ftpBaseUrl = ${DOWNLOAD_FTP_BASE_URL}
+%dev.paituli.download.inputPath = /tmp/paituli_in
+%dev.paituli.download.outputPath = /tmp/paituli_out
+%dev.paituli.download.outputBaseUrl = https://avaa.tdata.fi/tmp
+%dev.paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
+
 # email configuration
-%dev.quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
+quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
+%prod.quarkus.mailer.host = ${MAILER_HOST}
+%prod.quarkus.mailer.port = ${MAILER_PORT}
+%prod.quarkus.mailer.username = ${MAILER_USERNAME}
+%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
+%prod.quarkus.mailer.ssl = true
+%prod.quarkus.mailer.mock = false
 %dev.quarkus.mailer.mock = true
