--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,21 @@
+# Test configuration file
+
+# datasource configuration
 quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
 quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.username = hibernate
+quarkus.datasource.password = hibernate
+quarkus.hibernate-orm.database.generation=drop-and-create
 
+# download configuration
 paituli.download.filePrefix = paituli_
 paituli.download.inputPath = /tmp
 paituli.download.outputPath = /tmp
 paituli.download.outputBaseUrl = https://avaa.tdata.fi/tmp
 paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
 
+# email configuration
 quarkus.mailer.mock = true
+
+# log configuration
+paituli.log.salt = "batman"
