minor changes to logging and http ports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 # Configuration file
 
+# http configuration
+
+quarkus.http.port=9000
+%dev.quarkus.http.port=9000
+
+# logging configuration
+
+quarkus.log.file.enable=true
+quarkus.log.file.path=/var/log/quarkus.log
+quarkus.log.file.level=TRACE
+
 # datasource configuration
 quarkus.datasource.url = jdbc:postgresql://${DB_CONN_URL}/paituli
 quarkus.datasource.driver = org.postgresql.Driver
