--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.http.port=9000
 # logging configuration
 
 quarkus.log.file.enable=true
-quarkus.log.file.path=/var/log/quarkus.log
+quarkus.log.file.path=/var/log/quarkus/quarkus.log
 quarkus.log.file.level=TRACE
 
 # datasource configuration
