--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.http.port=9000
 
 quarkus.log.file.enable=true
 quarkus.log.file.path=/var/log/quarkus/quarkus.log
-quarkus.log.file.level=TRACE
+quarkus.log.file.level=DEBUG
 
 # datasource configuration
 quarkus.datasource.url = jdbc:postgresql://${DB_CONN_URL}/paituli
