--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ paituli.download.filePrefix = paituli_
 quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
 %prod.quarkus.mailer.host = ${MAILER_HOST}
 %prod.quarkus.mailer.port = ${MAILER_PORT}
-%prod.quarkus.mailer.username = ${MAILER_USERNAME}
-%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
+#%prod.quarkus.mailer.username = ${MAILER_USERNAME}
+#%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
 %prod.quarkus.mailer.ssl = true
 %prod.quarkus.mailer.mock = false
 %dev.quarkus.mailer.mock = true
