--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
 %prod.quarkus.mailer.port = ${MAILER_PORT}
 #%prod.quarkus.mailer.username = ${MAILER_USERNAME}
 #%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
-%prod.quarkus.mailer.ssl = true
+%prod.quarkus.mailer.ssl = false
 %prod.quarkus.mailer.mock = false
 %prod.quarkus.mailer.login = DISABLED
 %dev.quarkus.mailer.mock = true
