--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ paituli.download.filePrefix = paituli_
 %dev.paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
 
 # email configuration
-quarkus.mailer.from = PaITuli (CSC) <gis@csc.fi>
+quarkus.mailer.from = gis@csc.fi
 %prod.quarkus.mailer.host = ${MAILER_HOST}
 %prod.quarkus.mailer.port = ${MAILER_PORT}
 #%prod.quarkus.mailer.username = ${MAILER_USERNAME}
