--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ quarkus.mailer.from=gis@csc.fi
 #%prod.quarkus.mailer.username = ${MAILER_USERNAME}
 #%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
 %prod.quarkus.mailer.ssl=false
-%prod.quarkus.mailer.mock=false
+%prod.quarkus.mailer.mock=true
 %prod.quarkus.mailer.login=DISABLED
 %dev.quarkus.mailer.mock=true
 
