--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,8 @@ quarkus.mailer.from=gis@csc.fi
 %prod.quarkus.mailer.port=${MAILER_PORT}
 #%prod.quarkus.mailer.username = ${MAILER_USERNAME}
 #%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
-%prod.quarkus.mailer.ssl=false
 %prod.quarkus.mailer.mock=false
-%prod.quarkus.mailer.login=OPTIONAL
+%prod.quarkus.mailer.login=DISABLED
 %dev.quarkus.mailer.mock=true
 
 # log configuration
