--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,9 @@ quarkus.mailer.from=gis@csc.fi
 #%prod.quarkus.mailer.username = ${MAILER_USERNAME}
 #%prod.quarkus.mailer.password = ${MAILER_PASSWORD}
 %prod.quarkus.mailer.mock=false
+quarkus.mailer.disable-esmtp=true
+quarkus.mailer.start-tls=DISABLED
+quarkus.mailer.own-host-name=csc.fi
 %prod.quarkus.mailer.login=DISABLED
 %dev.quarkus.mailer.mock=true
 
