--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 
 quarkus.http.port=9000
 %dev.quarkus.http.port=8080
+%prod.quarkus.http.ssl.certificate.file=/etc/pki/tls/certs/paituli_avaa_csc_fi_cert.cer
+%prod.quarkus.http.ssl.certificate.key-file=/etc/pki/tls/private/paituli.avaa.csc.fi.key
 
 # logging configuration
 
