--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ quarkus.http.port=9000
 # logging configuration
 
 quarkus.log.file.enable=true
-quarkus.log.file.path=/var/log/quarkus/quarkus.log
+%prod.quarkus.log.file.path=/var/log/quarkus/quarkus.log
+%dev.quarkus.log.file.path=quarkus.log
 quarkus.log.file.level=DEBUG
 
 # datasource configuration
