--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 # download configuration
 paituli.download.filePrefix = paituli_
-paituli.download.inputPath = /tmp
+paituli.download.inputPath = /tmp/
 paituli.download.outputPath = /tmp
 paituli.download.outputBaseUrl = https://avaa.tdata.fi/tmp
 paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
