debugging file generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ quarkus.http.port=9000
 quarkus.log.file.enable=true
 %prod.quarkus.log.file.path=/var/log/quarkus/quarkus.log
 %dev.quarkus.log.file.path=quarkus.log
-quarkus.log.file.level=DEBUG
+quarkus.log.file.level=ALL
 
 # datasource configuration
 quarkus.datasource.url = jdbc:postgresql://${DB_CONN_URL}/paituli
@@ -26,7 +26,7 @@ paituli.download.filePrefix = paituli_
 %prod.paituli.download.outputPath = ${DOWNLOAD_OUTPUT_PATH}
 %prod.paituli.download.outputBaseUrl = ${DOWNLOAD_OUTPUT_BASE_URL}
 %prod.paituli.download.ftpBaseUrl = ${DOWNLOAD_FTP_BASE_URL}
-%dev.paituli.download.inputPath = /tmp/paituli_in
+%dev.paituli.download.inputPath = /tmp/paituli_in/
 %dev.paituli.download.outputPath = /tmp/paituli_out
 %dev.paituli.download.outputBaseUrl = https://avaa.tdata.fi/tmp
 %dev.paituli.download.ftpBaseUrl = http://www.nic.funet.fi/index
