Fixed tests for file creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ quarkus.http.port=9000
 quarkus.log.file.enable=true
 %prod.quarkus.log.file.path=/var/log/quarkus/quarkus.log
 %dev.quarkus.log.file.path=quarkus.log
+%dev.quarkus.log.console.level=ALL
 quarkus.log.file.level=ALL
 
 # datasource configuration
