--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 # http configuration
 
-quarkus.http.port=9000
+quarkus.http.port=${QUARKUS_PORT}
 %dev.quarkus.http.port=8080
 %prod.quarkus.http.ssl.certificate.file=${SSL_CERT_FILE}
 %prod.quarkus.http.ssl.certificate.key-file=${SSL_CERT_FILE_KEY}
