--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,9 @@ quarkus.log.file.enable=true
 quarkus.log.file.level=ALL
 
 # datasource configuration
-quarkus.datasource.url = jdbc:postgresql://${DB_CONN_URL}/paituli
-quarkus.datasource.driver = org.postgresql.Driver
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url = jdbc:postgresql://${DB_CONN_URL}/paituli
+quarkus.datasource.jdbc.max-size=16
 quarkus.datasource.username = ${DB_USERNAME}
 quarkus.datasource.password = ${DB_PASSWORD}
 
