--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ quarkus.package.type=legacy-jar
 
 quarkus.http.port=${QUARKUS_PORT}
 %dev.quarkus.http.port=8080
-%prod.quarkus.http.ssl.certificate.file=${SSL_CERT_FILE}
-%prod.quarkus.http.ssl.certificate.key-file=${SSL_CERT_FILE_KEY}
+# %prod.quarkus.http.ssl.certificate.file=${SSL_CERT_FILE}
+# %prod.quarkus.http.ssl.certificate.key-file=${SSL_CERT_FILE_KEY}
+quarkus.ssl.native=false
 
 # logging configuration
 
