--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@
 
 quarkus.http.port=${QUARKUS_PORT}
 %dev.quarkus.http.port=8080
-%prod.quarkus.http.ssl.certificate.file=${SSL_CERT_FILE}
-%prod.quarkus.http.ssl.certificate.key-file=${SSL_CERT_FILE_KEY}
+# %prod.quarkus.http.ssl.certificate.file=${SSL_CERT_FILE}
+# %prod.quarkus.http.ssl.certificate.key-file=${SSL_CERT_FILE_KEY}
+quarkus.ssl.native=false
 
 # logging configuration
 
@@ -16,8 +17,9 @@ quarkus.log.file.enable=true
 quarkus.log.file.level=ALL
 
 # datasource configuration
-quarkus.datasource.url = jdbc:postgresql://${DB_CONN_URL}/paituli
-quarkus.datasource.driver = org.postgresql.Driver
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url = jdbc:postgresql://${DB_CONN_URL}/paituli
+quarkus.datasource.jdbc.max-size=16
 quarkus.datasource.username = ${DB_USERNAME}
 quarkus.datasource.password = ${DB_PASSWORD}
 
